unpackaged/main/default/objects/conference360__Attendee__c/fields/Academic_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Academic_Plan_Code__c</fullName>
    <formula>conference360__Contact__r.Academic_Plan_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Academic Plan Code</label>
    <type>Text</type>
</CustomField>