unpackaged/main/default/objects/conference360__Attendee__c/fields/Academic_Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>Academic_Plan_Description__c</fullName>
    <formula>conference360__Contact__r.Academic_Plan_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Academic Plan Description</label>
    <type>Text</type>
</CustomField>