unpackaged/main/default/objects/conference360__Attendee__c/fields/Academic_Program_fx__c.field-meta.xml
<CustomField>
    <fullName>Academic_Program_fx__c</fullName>
    <description>Used in Events reporting</description>
    <formula>Recruitment_Opportunity__r.traa_Academic_Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Academic Program</label>
    <type>Text</type>
</CustomField>