unpackaged/main/default/objects/conference360__Attendee__c/fields/ACCESS_EMail__c.field-meta.xml
<CustomField>
    <fullName>ACCESS_EMail__c</fullName>
    <description>Pulls ACCESS Email from Organizer (Account) on Event. Used for Blackthorn notification templates</description>
    <formula>HYPERLINK(&quot;mailto:&quot;&amp; conference360__Event__r.conference360__Organizer_Account__r.ACCESS_EMail__c, conference360__Event__r.conference360__Organizer_Account__r.ACCESS_EMail__c)</formula>
    <label>ACCESS EMail</label>
    <type>Text</type>
</CustomField>