unpackaged/main/default/objects/conference360__Attendee__c/fields/ACCESS_Phone__c.field-meta.xml
<CustomField>
    <fullName>ACCESS_Phone__c</fullName>
    <description>Pulls ACCESS Phone from Organizer (Account) on Event. Used for Blackthorn notification templates</description>
    <formula>IF( LEN(conference360__Event__r.conference360__Organizer_Account__r.ACCESS_Phone__c) = 10,
&quot;(&quot; &amp; LEFT(conference360__Event__r.conference360__Organizer_Account__r.ACCESS_Phone__c,3) &amp; &quot;) &quot; &amp; MID(conference360__Event__r.conference360__Organizer_Account__r.ACCESS_Phone__c, 4, 3) &amp;&quot;-&quot; &amp; RIGHT(conference360__Event__r.conference360__Organizer_Account__r.ACCESS_Phone__c, 4),
conference360__Event__r.conference360__Organizer_Account__r.ACCESS_Phone__c)</formula>
    <label>ACCESS Phone</label>
    <type>Text</type>
</CustomField>