unpackaged/main/default/objects/conference360__Attendee__c/fields/Applicant_Current_Institution_fx__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Current_Institution_fx__c</fullName>
    <description>Used for reporting on Events</description>
    <formula>Recruitment_Opportunity__r.Applicant_Current_Institution_Text__c</formula>
    <label>Applicant Current Institution</label>
    <type>Text</type>
</CustomField>