unpackaged/main/default/objects/conference360__Attendee__c/fields/Attendee_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Type__c</fullName>
    <description>To be auto-mapped from Form to track if type of Attendee to drive additional automation around Opp and/or Relationship creation</description>
    <inlineHelpText>This should be mapped automatically from a Form. Required when manually adding attendees. Select Prospect/Applicant when the attendee is a student, select &#39;Guest&#39; when the attendee is a guest of the student, such as a family member. Guests only apply for Open House events.</inlineHelpText>
    <label>Attendee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect/Applicant</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>