unpackaged/main/default/objects/conference360__Attendee__c/fields/Campus_Recruitment_Email__c.field-meta.xml
<CustomField>
    <fullName>Campus_Recruitment_Email__c</fullName>
    <description>used for email/sms templates</description>
    <formula>HYPERLINK(&quot;mailto:&quot;&amp; conference360__Event__r.conference360__Organizer_Account__r.Recruitment_Email__c, conference360__Event__r.conference360__Organizer_Account__r.Recruitment_Email__c)</formula>
    <label>Campus Recruitment Email</label>
    <type>Text</type>
</CustomField>