unpackaged/main/default/objects/conference360__Attendee__c/fields/Completed_FOA__c.field-meta.xml
<CustomField>
    <fullName>Completed_FOA__c</fullName>
    <description>Used for Pre-Orientation Task Blackthorn Templates/Schedules</description>
    <formula>IF( Recruitment_Opportunity__r.Completed_FOA__c = true, &quot;Completed&quot;, &quot;Incomplete&quot;)</formula>
    <label>Completed FOA</label>
    <type>Text</type>
</CustomField>