unpackaged/main/default/objects/conference360__Attendee__c/fields/Completed_Shark_Intake__c.field-meta.xml
<CustomField>
    <fullName>Completed_Shark_Intake__c</fullName>
    <description>Used for Pre-Orientation Task Reminder Blackthorn templates/schedules</description>
    <formula>IF( Recruitment_Opportunity__r.Completed_Shark_Intake__c = true, &quot;Completed&quot;, &quot;Incomplete&quot;)</formula>
    <label>Completed Shark Intake</label>
    <type>Text</type>
</CustomField>