unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Account__c.field-meta.xml
<CustomField>
    <fullName>conference360__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Account record for the Contact field. This field will automatically populate if the Contact field is set.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>