unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Account_Name__c</fullName>
    <description>The name of the Account (Company).</description>
    <inlineHelpText>The name of the Account (Company).</inlineHelpText>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>