unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Account_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>conference360__Account_Postal_Code__c</fullName>
    <inlineHelpText>The postal code of the attendee.</inlineHelpText>
    <label>Account Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>