unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Attendance_Type__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendance_Type__c</fullName>
    <inlineHelpText>Set how the attendee will be participating in your event.</inlineHelpText>
    <label>Attendance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>