unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Attendee_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee_Full_Name__c</fullName>
    <description>Attendee&#39;s Full Name</description>
    <formula>conference360__First_Name2__c  &amp; &quot; &quot; &amp; conference360__Last_Name2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Attendee&#39;s Full Name</inlineHelpText>
    <label>Attendee Full Name</label>
    <type>Text</type>
</CustomField>