unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Attendee_Group__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Multiple attendees that registered together during the event checkout are added to an Attendee Group.</inlineHelpText>
    <label>Attendee Group</label>
    <referenceTo>conference360__Attendee_Group__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>