unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Attendee_Viewed_Link__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee_Viewed_Link__c</fullName>
    <description>If populated, the attendee viewed your event.</description>
    <inlineHelpText>If populated, the attendee viewed your event.</inlineHelpText>
    <label>Attendee Viewed Link</label>
    <type>DateTime</type>
</CustomField>