unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__AttendeeLink_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__AttendeeLink_URL__c</fullName>
    <description>Unique attendee link URL.</description>
    <formula>BLANKVALUE($Setup.conference360__Blackthorn_Events_Settings__c.conference360__Platform_Domain__c, &#39;https://events.blackthorn.io/&#39;) &amp; &#39;/&#39; &amp; $Organization.Id &amp; &#39;/attendee/&#39; &amp; conference360__Encrypted_ID__c</formula>
    <inlineHelpText>Unique attendee link URL.</inlineHelpText>
    <label>AttendeeLink URL(Deprecated).</label>
    <type>Text</type>
</CustomField>