unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__City__c.field-meta.xml
<CustomField>
    <fullName>conference360__City__c</fullName>
    <inlineHelpText>The city of the attendee.</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>