unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Donated__c.field-meta.xml
<CustomField>
    <fullName>conference360__Donated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>After this person gives a donation, this box will get checked.</inlineHelpText>
    <label>Donated</label>
    <type>Checkbox</type>
</CustomField>