unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Duplicate_Rule__c.field-meta.xml
<CustomField>
    <fullName>conference360__Duplicate_Rule__c</fullName>
    <inlineHelpText>This field is automatically populated with the Salesforce matching or duplicate rule used when either connecting this attendee to an existing contact or creating a new one.</inlineHelpText>
    <label>Duplicate Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>