unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Email__c.field-meta.xml
<CustomField>
    <fullName>conference360__Email__c</fullName>
    <inlineHelpText>Deprecated. Use Email2__c instead</inlineHelpText>
    <label>Email(Deprecated)</label>
    <type>Email</type>
</CustomField>