unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Event_Alternative_Image_Text__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Alternative_Image_Text__c</fullName>
    <formula>conference360__Event__r.conference360__Alternative_Image_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please add descriptive text to accompany your image. Alternative text is important for visually-impaired users who rely on screen readers. Provide a clear and concise description of the image to ensure accessibility.</inlineHelpText>
    <label>Event Alternative Text Visual Impairment</label>
    <type>Text</type>
</CustomField>