unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Event_Details__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Details__c</fullName>
    <formula>HYPERLINK(&#39;/&#39;&amp; conference360__Event__c , &#39;View event details&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Details</label>
    <type>Text</type>
</CustomField>