unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Event_Group__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Group</label>
    <referenceTo>conference360__Event_Group__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>