unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Event_ID__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_ID__c</fullName>
    <description>This field store the Id of the event in text format. Used for matching.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field store the Id of the event in text format. Used for matching.</inlineHelpText>
    <label>Event ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>