unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Start_Date__c</fullName>
    <formula>conference360__Event__r.conference360__Event_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Start Date</label>
    <type>Date</type>
</CustomField>