unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__First_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__First_Name__c</fullName>
    <inlineHelpText>Deprecated. Use First_Name2__c instead.</inlineHelpText>
    <label>First Name(Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>