unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Hide_from_Attendee_List__c.field-meta.xml
<CustomField>
    <fullName>conference360__Hide_from_Attendee_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide from Attendee List</label>
    <type>Checkbox</type>
</CustomField>