unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Instagram__c.field-meta.xml
<CustomField>
    <fullName>conference360__Instagram__c</fullName>
    <label>Instagram</label>
    <type>Url</type>
</CustomField>