unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Invite_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>conference360__Invite_Sent_To__c</fullName>
    <description>Automatically populates with the email address that the invite was sent to.</description>
    <inlineHelpText>Automatically populates with the email address that the invite was sent to.</inlineHelpText>
    <label>Invite Sent To</label>
    <type>Email</type>
</CustomField>