unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Key_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>conference360__Key_Encrypted__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Indexed and encrypted key field that is used by the Events API and Attendee Urls - is generated by triggers if it is blank.</description>
    <externalId>true</externalId>
    <inlineHelpText>Indexed and encrypted key field that is used by the Events API and Attendee Urls - is generated by triggers if it is blank.</inlineHelpText>
    <label>Key Encrypted</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>