unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Last_Name2__c.field-meta.xml
<CustomField>
    <fullName>conference360__Last_Name2__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Last name of the attendee. This field may be set by the registration process, from the related Contact, or manually entered.</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>