unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Last_Publish_To_Platform_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>conference360__Last_Publish_To_Platform_Completed_At__c</fullName>
    <label>Last Publish To Platform Completed At</label>
    <type>DateTime</type>
</CustomField>