unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>conference360__LinkedIn__c</fullName>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>