unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Minutes_Watched_of_Video__c.field-meta.xml
<CustomField>
    <fullName>conference360__Minutes_Watched_of_Video__c</fullName>
    <description>Minutes watched of the Event video.</description>
    <inlineHelpText>Minutes watched of the Event video.</inlineHelpText>
    <label>Minutes Watched of Video</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>