unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Not_Paid__c.field-meta.xml
<CustomField>
    <fullName>conference360__Not_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will be checked if the Attendee is related to a Invoice that has not been paid.</inlineHelpText>
    <label>Not Paid</label>
    <type>Checkbox</type>
</CustomField>