unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Phone2__c.field-meta.xml
<CustomField>
    <fullName>conference360__Phone2__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The attendee&#39;s phone number. This field may be set by the registration process, from the related Contact, or manually entered.</inlineHelpText>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>