unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Phone__c.field-meta.xml
<CustomField>
    <fullName>conference360__Phone__c</fullName>
    <inlineHelpText>Deprecated. Use Phone2__c instead.</inlineHelpText>
    <label>Phone(Deprecated)</label>
    <type>Phone</type>
</CustomField>